# ProgrammingCourse

./: 10.c  CMakeLists.txt
libs/: CMakeLists.txt
libs/algoritms/: algoritms.c  algoritms.h
libs/string/: string_.c  string_.h
libs/structures/: CMakeLists.txt  structures.c  structures.h
libs/structures/matrix/: CMakeLists.txt  matrix.c  matrix.h
libs/structures/vector/: vector.c  vector.h
